--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hitachi-abb",
   "productName": "hitachi-abb",
-  "version": "1.0.1",
+  "version": "0.9.0",
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
@@ -11,10 +11,16 @@
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\"",
     "build-installer": "electron-builder",
-    "build-installer-all": "electron-builder -mw"
+    "build-installer-all": "electron-builder -mw",
+    "relese": "electron-builder  -p 'onTagOrDraft'"
   },
+  "repository": "https://github.com/muktinaxtre/hitachi-abb.git",
+  "homepage": "https://github.com/muktinaxtre/hitachi-abb.git",
   "build": {
     "appId": "abb",
+    "publish": {
+      "provider": "github"
+    },
     "extraFiles": [
       "public"
     ],
@@ -73,7 +79,9 @@
     "convert-excel-to-json": "^1.7.0",
     "dotenv": "^8.2.0",
     "ejs-electron": "^2.1.1",
+    "electron-log": "^4.3.5",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-updater": "^4.3.8",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "json2xls": "^0.1.2",
@@ -82,7 +90,7 @@
     "nedb": "^1.8.0"
   },
   "devDependencies": {
-    "electron-builder": "^22.10.5",
+    "electron-builder": "^22.11.2",
     "@electron-forge/cli": "^6.0.0-beta.54",
     "@electron-forge/maker-deb": "^6.0.0-beta.54",
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
